# coinshift_test

./: .gitignore  README.md  conftest.py  pyproject.toml  settings.py
modules/: api_client.py  search_page_locators.py
tests/api/: test_indexer_payload.py
tests/frontend/: test_indexer_page.py
