[tool.poetry]
name = "Coinshift_interview"
version = "0.1.0"
description = "Interview prep"
authors = ["Roman Leca <roman.leca@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
playwright = "^1.14.0"
pytest = "^7.3.1"
pytest-playwright = "^0.3.2"
pytest-xdist = "^3.2.1"
click = "8.1.3"

[tool.poetry.dev-dependencies]
pytest-mock = "^3.6.1"
black = "^23.3.0"

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"